# avrotool

./: .gitignore  CMakeLists.txt  Makefile  README.md  avro-c.c
.github/workflows/: build.yml  cmake.yml  codecov.yml  coderrect.yml
sampledata/: data.csv  schema.json
src/: CMakeLists.txt  avro-c.c  avrotool.c
