SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/build/lib)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/build/include)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/build/lib)

IF (NOT WIN32)
    STRING(ASCII 27 Esc)
    SET(ColourReSET "${Esc}[m")
    SET(ColourBold  "${Esc}[1m")
    SET(Red         "${Esc}[31m")
    SET(Green       "${Esc}[32m")
    SET(Yellow      "${Esc}[33m")
    SET(Blue        "${Esc}[34m")
    SET(Magenta     "${Esc}[35m")
    SET(Cyan        "${Esc}[36m")
    SET(White       "${Esc}[37m")
    SET(BoldRed     "${Esc}[1;31m")
    SET(BoldGreen   "${Esc}[1;32m")
    SET(BoldYellow  "${Esc}[1;33m")
    SET(BoldBlue    "${Esc}[1;34m")
    SET(BoldMagenta "${Esc}[1;35m")
    SET(BoldCyan    "${Esc}[1;36m")
    SET(BoldWhite   "${Esc}[1;37m")
ENDIF ()

IF (${CMAKE_BUILD_TYPE} MATCHES "DEBUG")
    MESSAGE("${Yellow} DEBUG mode ${ColourReSET}")
    SET(CMAKE_C_FLAGS "-fsanitize=address -fsanitize=undefined -fno-sanitize-recover=all -fsanitize=float-divide-by-zero -fsanitize=float-cast-overflow -fno-sanitize=null -fno-sanitize=alignment -O0 -g3 -DDEBUG")
ELSE ()
    MESSAGE("${Green} RELEASE mode ${ColourReSET}")
    SET(CMAKE_C_FLAGS "-DRELEASE")
ENDIF (${CMAKE_BUILD_TYPE} MATCHES "DEBUG")

ADD_EXECUTABLE(avrotool avrotool.c)
TARGET_LINK_LIBRARIES(avrotool PRIVATE avro jansson)

